@@ -6,7 +6,7 @@ Plack::Middleware::CustomErrorDocument - dynamically select error documents base
 
 =head1 VERSION
 
-version 0.003
+version 0.004
 
 =head1 SYNOPSIS
 
