@@ -2,6 +2,8 @@ Revision history for Plack-Middleware-CustomErrorDocument
 
 {{$NEXT}}
 
+ - tests actually test CustomErrorDocument instead of ErrorDocument!
+
 0.003     2012-06-29 17:31:31 Europe/London
 
  - Matches behaviour of Plack::Middleware::ErrorDocument for non-dynamic error page selection
